# trading-analyst-ai-agent

./: .gitignore  README.md  main.py  military_prompt.xml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: daily_analysis.yml
api/: webhook.py
composite_and_catalyst/: market_intelligence_prompt.xml  signal_generator_prompt.xml
config/: logging_config.yaml  settings.py
geopolitics/: diplomatic_prompt.xml  economic_prompt.xml  military_prompt.xml
market_consensus/: market_consensus_prompt.xml
monetary_policy/: fomc_prompt.xml
notebooks/: test.ipynb
src/fomc/: fomc_database.py  fomc_fetchers.py  fomc_models.py  fomc_workflow.py
src/handlers/: user_handler.py
src/llm/: claude_client.py  openai_client.py  utils.py
src/prompt_engineering/: templates.py
src/utils/: logger.py  telegram_formatter.py  telegram_sender.py
theme_analysis/: theme_analysis_prompt.xml  us_equity_intelligence_analysis.xml
