[project]
name = "trading-analyst-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.74.1",
    "beautifulsoup4>=4.14.2",
    "langchain-anthropic>=1.2.0",
    "langchain-core>=1.0.7",
    "langgraph>=1.0.3",
    "langsmith>=0.4.44",
    "psycopg2-binary>=2.9.11",
]
